--- a/spells/мерцание.md
+++ b/spells/мерцание.md
@@ -1,83 +1,22 @@
+# Мерцание
 
-Мерцание
+|                 |                      |
+| --------------- | -------------------- |
+| Тип             | Превращение          |
+| Уровень         | Брд 3, Маг/Чар 3     |
+| Компоненты      | В, С                 |
+| Время Активации | 1 стандартн. действ. |
+| Диапазон        | Лично                |
+| Цель            | Вы                   |
+| Длительность    | 1 раунд/уровень (П)  |
 
-Превращение
-Уровень: Брд 3, Маг/Чар 3
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Лично
-Цель: Вы
-Длительность: 1 раунд/уровень (П)
-Как и мерцающий пес (смотрите Справочник Монстров), вы начинаете мерцать туда сюда, находясь между Материальным Планом и Эфирным Планом.
-Вы постоянно очень быстро и случайно
-мерцаете в и во вне реальности.
-Мерцание имеет несколько эффектов,
-которые приведены ниже.
-Физические атаки против вас имеют
-50% шанс на провал, а черта Сражение
-в Слепую не помогает вашим оппонентам, так как вы становитесь бесплотным а не просто невидимый. Если атаки которые наносит существо способны
-поражать эфирных существ, то шанс на
-промах уменьшается до 20% (за укрытие). Если атакующий способен видеть
-невидимых существ, шанс промаха
-также остается 20%. (Для атакующих
-существ способных видеть невидимых
-существ, а также наносить повреждения эфирным существам шанс на промах аннулируется). Ваши собственные
-атаки также имеют шанс промаха 20%,
-лишь в тех случаях, когда вы собираетесь нанести удар, но в этот момент вы
-эфирны.
-Любые индивидуальные заклинания
-против вас имеют шанс провала 50%
-во время длительности заклинания
-мерцание, кроме того, ваш противник
-может активировать свои заклинания
-на эфирных, невидимых целей. Ваши
-собственные заклинания имеют 20%
-шанс активации, только тогда когда вы
-становитесь бестелесным, и в этом случае они просто не действуют в Материальном Плане.
-Пока длиться мерцание вы получаете половину повреждений от атак
-воздействующих на зону (но полные
-повреждения, если они способны распространяться и на Эфирный План).
-Вы атакуете как невидимое существо (с
-бонусом +2 к броскам атаки), отрицая
-любые бонусы Ловкости цели к КД. Вы
-получаете лишь половину повреждений от падения, так как считается, что
-вы падаете лишь в том момент, когда
-материальны.
 
-Пока длиться мерцание вы способны
-проходить через плотные объекты (но
-не видеть через них). Для каждых 1,5
-м плотного вещества существует 50%
-шанс того, что вы станете материальны. Если это произошло, вы немедленно передвигаетесь на любое свободное
-пространство и переносите 1d6 повреждений за каждые 1,5 м перемещения.
-Вы способны передвигаться лишь с 1/3
-своей скорости (потому что передвижение в Эфирном Плане равно половине
-вашего передвижения, и вы проводите
-половину своего времени в Эфирном
-Плане, а остальную половину времени
-в Материальном Плане).
-Так как вы проводите половину своего времени в Эфирном Плане вы способны видеть и даже атаковать эфирных
-существ. Вы взаимодействуете с эфирными существами приблизи-тельно таким же образом, как и с материальными
-существами. Например, вы имеете 20%
-успеха при активации заклинаний на
-эфирных существ, так как вы можете
-вновь стать материальным, а заклинание будет потеряно.
-Эфирные существа невидимы, бестелесны и способны передвигаться в любых направлениях даже вниз или вверх.
-Как эфирное существо вы способны
-передвигаться через плотные объекты,
-даже через живых существ. Эфирные
-существа могут видеть и слышать, что
-происходит в Материальном Плане но
-все выглядит серо и размыто. Видимость и слышимость Материального
-Плана ограничивается 18 м Силовые
-эффекты (такие как магическая стрела
-или стена силы) и эффекты заклинаний
-школы защиты нормально воздействуют на вас. Их эффекты распространяются с Материального Плана на Эфирный
-План, но не в обратной последовательности. Эфирные существа не способны
-атаковать материальных существ, а заклинания, которые вы активируете, находясь в эфирном состоянии, влияют
-лишь на эфирные предметы. Особые
-материальные существа или объекты
-имеют атаки или эффекты, которые
-действуют и в Эфирном Плане (к примеру, василиск и его атака взглядом).
-Принимайте других эфирных существ
-и объекты так же как и материальных.
+Как и мерцающий пес (смотрите Справочник Монстров), вы начинаете мерцать туда сюда, находясь между Материальным Планом и Эфирным Планом. Вы постоянно очень быстро и случайно мерцаете в и во вне реальности. Мерцание имеет несколько эффектов, которые приведены ниже.
+
+Физические атаки против вас имеют 50% шанс на провал, а черта Сражение в Слепую не помогает вашим оппонентам, так как вы становитесь бесплотным, а не просто невидимым. Если атаки, которые наносит существо, способны поражать эфирных существ, то шанс на промах уменьшается до 20% (за укрытие). Если атакующий способен видеть невидимых существ, шанс промаха также остается 20%. (Для атакующих существ способных видеть невидимых существ, а также наносить повреждения эфирным существам шанс на промах аннулируется). Ваши собственные атаки также имеют шанс промаха 20%, лишь в тех случаях, когда вы собираетесь нанести удар, но в этот момент вы эфирны.
+
+Любые индивидуальные заклинания против вас имеют шанс провала 50% во время длительности заклинания мерцание, кроме того, ваш противник может активировать свои заклинания на эфирных, невидимых целей. Ваши собственные заклинания имеют 20% шанс активации, только тогда когда вы становитесь бестелесным, и в этом случае  ни просто не действуют в Материальном Плане. Пока длиться мерцание вы получаете половину повреждений от атак воздействующих на зону (но полные повреждения, если они способны распространяться и на Эфирный План). Вы такуете как невидимое существо (с бонусом +2 к броскам атаки), отрицая любые бонусы Ловкости цели к КД. Вы получаете лишь половину повреждений от падения, так как считается, что вы падаете лишь в том момент, когда материальны. 
+
+Пока длиться мерцание вы способны проходить через плотные объекты (но не видеть через них). Для каждых 1,5 м плотного вещества существует 50% шанс того, что вы станете материальны. Если это произошло, вы немедленно передвигаетесь на любое свободное пространство и переносите 1d6 повреждений за каждые 1,5 м перемещения. Вы способны передвигаться лишь с 1/3 своей скорости (потому что передвижение в Эфирном Плане равно половине вашего передвижения, и вы проводите половину своего времени в Эфирном Плане, а остальную половину времени в Материальном Плане). Так как вы проводите половину своего времени в Эфирном Плане вы способны видеть и даже атаковать эфирных существ. Вы взаимодействуете с эфирными существами приблизи-тельно таким же образом, как и с материальными существами. Например, вы имеете 20% успеха при активации заклинаний на эфирных существ, так как вы можете вновь стать материальным, а заклинание будет потеряно.
+
+Эфирные существа невидимы, бестелесны и способны передвигаться в любых направлениях даже вниз или вверх. Как эфирное существо вы способны передвигаться через плотные объекты, даже через живых существ. Эфирные существа могут видеть и слышать, что происходит в Материальном Плане но все выглядит серо и размыто. Видимость и слышимость Материального Плана ограничивается 18 м Силовые эффекты (такие как магическая стрела или стена силы) и эффекты заклинаний школы защиты нормально воздействуют на вас. Их эффекты распространяются с Материального Плана на Эфирный План, но не в обратной последовательности. Эфирные существа не способны атаковать материальных существ, а заклинания, которые вы активируете, находясь в эфирном состоянии, влияют лишь на эфирные предметы. Особые материальные существа или объекты имеют атаки или эффекты, которые действуют и в Эфирном Плане (к примеру, василиск и его атака взглядом). Принимайте других эфирных существ и объекты так же как и материальных.
