--- a/spells/мерцапыль.md
+++ b/spells/мерцапыль.md
@@ -1,23 +1,17 @@
+# Мерцапыль
 
-Мерцапыль
+|                        |                                                       |
+| ---------------------- | ----------------------------------------------------- |
+| Тип                    | Колдовство (Созидание)                                |
+| Уровень                | Брд 2, Маг/Чар 2                                      |
+| Компоненты             | В, С, М                                               |
+| Время Активации        | 1 стандартн. действ.}                                 |
+| Диапазон               | Средний (30 м+3 м/ур.)}                               |
+| Зона                   | Существа и объекты в пределах 3 метрового расширения} |
+| Длительность           | 1 раунд/уровень                                       |
+| Спасбросок             | Воля нейтрализует (только ослепляет)                  |
+| Устойчивость к Магии   | Нет                                                   |
+| Материальный Компонент | Щепотка слюды.                                        |
 
-Колдовство (Созидание)
-Уровень: Брд 2, Маг/Чар 2
-Компоненты: В, С, М
-Время Активации: 1 стандартн. действ.
-Диапазон: Средний (30 м+3 м/ур.)
-Зона: Существа и объекты в пределах 3
-метрового расширения
-Длительность: 1 раунд/уровень
-Спасбросок: Воля нейтрализует (только
-ослепляет)
-Устойчивость к Магии: Нет
-Облако золотистых частичек покрывает все и всех в зоне поражения, ослепляя существ, и обозначая очерта-ния
-невидимых существ на время длительности заклинания. Все в пределах зоны
-покрыто пылью, которую невозможно
-снять, и она продолжает мерцать до тех
-пор, пока не погаснет.
-Любое существо покрытое пылью,
-переносит –40 штраф к проверкам
-Скрытности.
-Материальный Компонент: Щепотка слюды.
+
+Облако золотистых частичек покрывает все и всех в зоне поражения, ослепляя существ, и обозначая очертания невидимых существ на время длительности заклинания. Все в пределах зоны покрыто пылью, которую невозможно снять, и она продолжает мерцать до тех пор, пока не погаснет. Любое существо покрытое пылью, переносит –40 штраф к проверкам Скрытности.
