Format метеоритны-шторм

--- a/spells/метеоритный-шторм.md
+++ b/spells/метеоритный-шторм.md
@@ -1,40 +1,15 @@
+# Метеоритный Шторм
 
-Метеоритный Шторм
+|                      |                                                                    |
+| -------------------- | ------------------------------------------------------------------ |
+| Тип                  | Заклятие \[Огонь\]                                                   | 
+| Уровень              | Маг/Чар 9                                                          |
+| Компоненты           | В, С.                                                              |
+| Время Активации      | 1 стандартн. действ.                                               |
+| Диапазон             | Дальний (120 м+12 м/ур.)                                           |
+| Зона                 | 4 сферы при взрыве распространяются в радиусе 12 м; смотрите текст |
+| Длительность         | Мгновенно                                                          |
+| Спасбросок           | Нет или Рефлекс половина; смотрите текст                           |
+| Устойчивость к Магии | Да                                                                 |
 
-Заклятие [Огонь]
-Уровень: Маг/Чар 9
-Компоненты: В, С.
-Время Активации: 1 стандартн. действ.
-Диапазон: Дальний (120 м+12 м/ур.)
-Зона: 4 сферы при взрыве
-распространяются в радиусе 12 м;
-смотрите текст
-Длительность: Мгновенно
-Спасбросок: Нет или Рефлекс половина;
-смотрите текст
-Устойчивость к Магии: Да
-
-Метеоритный шторм – очень мощное
-и эффективное заклинание, которое во
-многих аспектах похоже на шар огня.
-Когда вы его активируете, из вашей
-руки вылетают 4 сферы диаметром 60
-см. и летят к выбранной цели. Метеориты оставляют за собой огненный след.
-Если вы нацеливаете сферы на определенный субъект, вам нужно провести
-касательную атаку, чтобы поразить
-цель метеоритом. Каждое существо, в
-которое попала одна из сфер, переносит 2d6 пунктов повреждения от дробящего (спасбросков нет), а также не
-получает возможности спасброска от
-огненных повреждений этих сфер (смотрите ниже). Если нацеленные сферы
-не попадают, то они просто взрываются в ближайшем от цели углу. На одну
-цель можно направить более чем один
-метеорит.
-Как только сфера достигает пункта
-своего назначения, она взрывается,
-распространяя взрыв в радиусе 12 м от
-себя, нанося по 6d6 пунктов повреждения огнем для каждого существа в зоне
-поражения. Если существо в пределах
-зоны поражения более чем одной сферы, то оно проверяет спасбросок от
-каждой в отдельности. (Устойчивость к
-огню проверяется также против каждой
-сферы отдельно).
+Метеоритный шторм – очень мощное и эффективное заклинание, которое во многих аспектах похоже на шар огня. Когда вы его активируете, из вашей руки вылетают 4 сферы диаметром 60 см. и летят к выбранной цели. Метеориты оставляют за собой огненный след. Если вы нацеливаете сферы на определенный субъект, вам нужно провести касательную атаку, чтобы поразить цель метеоритом. Каждое существо, в которое попала одна из сфер, переносит 2d6 пунктов повреждения от дробящего (спасбросков нет), а также не получает возможности спасброска от огненных повреждений этих сфер (смотрите ниже). Если нацеленные сферы не попадают, то они просто взрываются в ближайшем от цели углу. На одну цель можно направить более чем один метеорит. Как только сфера достигает пункта своего назначения, она взрывается, распространяя взрыв в радиусе 12 м от себя, нанося по 6d6 пунктов повреждения огнем для каждого существа в зоне поражения. Если существо в пределах зоны поражения более чем одной сферы, то оно проверяет спасбросок от каждой в отдельности. (Устойчивость к огню проверяется также против каждой сферы отдельно).
