--- a/spells/меч-морденкайнена.md
+++ b/spells/меч-морденкайнена.md
@@ -1,70 +1,19 @@
 
-Меч Морденкайнена
+# Меч Морденкайнена
 
-Заклятие [Силовое]
-Уровень: Маг/Чар 7
-Компоненты: В, С, Ф
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Эффект: 1 меч
-Длительность: 1 раунд/уровень (П)
-Спасбросок: Нет
-Устойчивость к Магии: Нет
-Заклинание призывает сияющий энергетический силовой меч. Меч поражает
-любого противника по вашему желанию
-в пределах диапазона, начиная с того раунда, когда сактивировано заклинание.
-Меч атакует обозначенную цель 1 раз в
-раунд в ваш ход. Его бонус атаки равен
-ваш уровень заклинателя+ваш бонус
-Интл или Обн (для магов и чародеев соответственно)+3 дополнительный бонус
-заколдованности. Как силовое оружие
-он может поражать эфирных и бестелесных существ. Он наносит 4d6+3 повреждений силы, критически 19-20 (×2).
-Меч всегда бьет по вашему указанию.
-Он не получает бонуса от фланкирования и не помогает сражающимся его получить. Если меч выходит из диапазона
-заклинания, скрывается из вида или вы
-не нацеливаете его, меч возвращается к
-вам и парит рядом.
-Каждый раунд после первого вы можете перенаправить меч на новую цель;
-стандартное действие. Если вы этого не
-делаете, меч атакует ту же цель. Меч
-нельзя поразить физическими атаками,
-но против него действуют рассеивание
-магии, дезинтеграция, сфера аннигиляции или жезл ликвидации. КД меча 13
-(10+0 модификатор размера Средний+3
-бонус отклонения).
-Если у атакуемого существа есть
-устойчивость к магии, она проверяется при первой атаке меча. Если мечу
-успешно противостоят, заклинание рассеивается. Если же нет, то меч наносит
-нормальные повреждения на протяжении всей длительности заклинания.
-Фокусирование: Миниатюрный платиновый меч с рукояткой и гардой из
-меди и цинка, стоимостью 250 зм.
+|                      |                                                                                     |
+| -------------------- | ----------------------------------------------------------------------------------- |
+| Тип                  | Заклятие [Силовое]                                                                  |
+| Уровень              | Маг/Чар 7                                                                           |
+| Компоненты           | В, С, Ф                                                                             |
+| Время Активации      | 1 стандартн. действ.                                                                |
+| Диапазон             | Ближний (7,5 м+1,5 м/2 ур.)                                                         |
+| Эффект               | 1 меч                                                                               |
+| Длительность         | 1 раунд/уровень (П)                                                                 | 
+| Спасбросок           | Нет                                                                                 |
+| Устойчивость к Магии | Нет                                                                                 |
+| Фокусирование        | Миниатюрный платиновый меч с рукояткой и гардой из меди и цинка, стоимостью 250 зм. |
 
-Мнемоническое Усиление Рари
-Превращение
-Уровень: Маг 4
-Компоненты: В, С, М, Ф
-Время Активации: 10 минут
-Диапазон: Лично
-Цель: Вы
-Длительность: Мгновенно
 
-Активация этого заклинания позволяет подготовить вам дополнительные
-заклинания или восстановить уже использованные. Выбирайте один из этих
-вариантов:
-Подготовка: Вы подготавливаете до
-3 дополнительных уровней заклинаний
-(например, 3 заклинания первого уров-
+Заклинание призывает сияющий энергетический силовой меч. Меч поражает любого противника по вашему желанию в пределах диапазона, начиная с того раунда, когда сактивировано заклинание. Меч атакует обозначенную цель 1 раз в раунд в ваш ход. Его бонус атаки равен ваш уровень заклинателя+ваш бонус Интл или Обн (для магов и чародеев соответственно)+3 дополнительный бонус заколдованности. Как силовое оружие он может поражать эфирных и бестелесных существ. Он наносит 4d6+3 повреждений силы, критически 19-20 (×2). Меч всегда бьет по вашему указанию. Он не получает бонуса от фланкирования и не помогает сражающимся его получить. Если меч выходит из диапазона заклинания, скрывается из вида или вы не нацеливаете его, меч возвращается к вам и парит рядом. Каждый раунд после первого вы можете перенаправить меч на новую цель; стандартное действие. Если вы этого не делаете, меч атакует ту же цель. Меч нельзя поразить физическими атаками, но против него действуют рассеивание магии, дезинтеграция, сфера аннигиляции или жезл ликвидации. КД меча 13 (10+0 модификатор размера Средний+3 бонус отклонения). Если у атакуемого существа есть устойчивость к магии, она проверяется при первой атаке меча. Если мечу успешно противостоят, заклинание рассеивается. Если же нет, то меч наносит нормальные повреждения на протяжении всей длительности заклинания.
 
-ня, или одно - второго и одно – первого уровня, или одно – третьего уровня).
-Кантрип считается как 1/2 уровня. Вы
-готовите и активируете эти заклинания
-как обычно.
-Восстановление: Вы восстанавливаете любое заклинание до третьего
-уровня, которое вы сактивировали не
-позднее 1 раунда до использования
-мнемонического усиления. Это вос-станавливает предварительно сактиви-рованное заклинание в вашей памяти.
-В другом случае, заклинания готовятся или восстанавливаются спустя
-24 часа (если не колдовать).
-Материальные Компоненты: Кусочек нитки и чернила, состоящие из секреции кальмара смешанной с кровью
-черного дракона.
-Фокусирование: Пластинка из слоновой кости ценой 50 зм.
