--- a/spells/мнемоническое-усиление-рари.md
+++ b/spells/мнемоническое-усиление-рари.md
@@ -17,5 +17,5 @@
 |                |                                                                                                                                                                                                                                                                                                                                |
 | -------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | Подготовка     | Вы подготавливаете до 3 дополнительных уровней заклинаний (например, 3 заклинания первого уровня, или одно - второго и одно – первого уровня, или одно – третьего уровня). Кантрип считается как 1/2 уровня. Вы готовите и активируете эти заклинания как обычно.                                                              |
-| Восстановление | Вы восстанавливаете любое заклинание до третьего уровня, которое вы сактивировали не позднее 1 раунда до использования мнемонического усиления. Это восстанавливает предварительно сактиви-рованное заклинание в вашей памяти. В другом случае, заклинания готовятся или восстанавливаются спустя 24 часа (если не колдовать). |
+| Восстановление | Вы восстанавливаете любое заклинание до третьего уровня, которое вы сактивировали не позднее 1 раунда до использования мнемонического усиления. Это восстанавливает предварительно сактивированное заклинание в вашей памяти. В другом случае, заклинания готовятся или восстанавливаются спустя 24 часа (если не колдовать). |
 
