--- a/spells/молот-хаоса.md
+++ b/spells/молот-хаоса.md
@@ -1,40 +1,14 @@
+# Молот Хаоса
+|                      |                                         |
+| -------------------- | --------------------------------------- |
+| Тип                  | Заклятие [Хаос]                         |
+| Уровень              | Хаос 4                                  |
+| Компоненты           | В, С                                    |
+| Время Активации      | 1 стандартн. действ.                    |
+| Диапазон             | Средний (30 м+3 м/ур.)                  |
+| Зона Поражения       | Взрыв с 12 м радиусом                   |
+| Длительность         | Мгновенно (1d6 раундов); смотрите текст |
+| Спасбросок           | Воля нейтрализует; смотрите текст       |
+| Устойчивость к Магии | Да                                      |
 
-Молот Хаоса
-
-Заклятие [Хаос]
-Уровень: Хаос 4
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Средний (30 м+3 м/ур.)
-Зона Поражения: Взрыв с 12 м
-радиусом
-Длительность: Мгновенно (1d6 раундов);
-смотрите текст
-Спасбросок:
-Воля
-нейтрализует;
-
-смотрите текст
-Устойчивость к Магии: Да
-Вы даете волю неведомой хаотичной
-силе, которая поражает ваших врагов.
-Сила приобретает форму разноцветной
-взрывающейся, пульсирующей, рикошетящей энергии. Лишь законные и
-нейтральные (не хаотичные) существа
-повреждаются этим заклинанием.
-Заклинание наносит 1d8 повреж-дений за каждые 2 уровня заклинателя
-(максимум 5d8) законным существам
-(или 1d6 повреждений за уровень заклинателя, максимум 10d6, закон-ным
-внешним), и замедляет их на 1d6 раундов. Замедленное существо способно проводить только стандартное
-действие или действие передвижения
-в свой ход, плюс свободные действия.
-В дополнение, оно получает штраф –2
-к КД, броскам атаки, повреждениям, и
-спасброскам Рефлекса. Успешный спасбросок Воли уменьшает повреждения
-до половины и нейтрализует замедляющий эффект.
-Заклинание наносит лишь половину
-повреждений существам которые ни
-хаотичные, ни законные в своем мировоззрение, и они не поддаются эффекту
-замедления. Такие существа способны
-уменьшить повреждения ещё на половину (понижаются до 1/4) успешно
-пройдя спасбросок Воли.
+Вы даете волю неведомой хаотичной силе, которая поражает ваших врагов. Сила приобретает форму разноцветной взрывающейся, пульсирующей, рикошетящей энергии. Лишь законные и нейтральные (не хаотичные) существа повреждаются этим заклинанием. Заклинание наносит 1d8 повреж-дений за каждые 2 уровня заклинателя (максимум 5d8) законным существам (или 1d6 повреждений за уровень заклинателя, максимум 10d6, законным внешним), и замедляет их на 1d6 раундов. Замедленное существо способно проводить только стандартное действие или действие передвижения в свой ход, плюс свободные действия. В дополнение, оно получает штраф –2 к КД, броскам атаки, повреждениям, и спасброскам Рефлекса. Успешный спасбросок Воли уменьшает повреждения до половины и нейтрализует замедляющий эффект. Заклинание наносит лишь половину повреждений существам которые ни хаотичные, ни законные в своем мировоззрение, и они не поддаются эффекту замедления. Такие существа способны уменьшить повреждения ещё на половину (понижаются до 1/4) успешно пройдя спасбросок Воли.
