--- a/spells/молчаливый-образ.md
+++ b/spells/молчаливый-образ.md
@@ -1,21 +1,16 @@
+# Молчаливый Образ
 
-Молчаливый Образ
+|                      |                                                                          |
+| -------------------- | ------------------------------------------------------------------------ |
+| Тип                  | Иллюзия (Фикция)                                                         |
+| Уровень              | Бард 1, Маг/Чар 1                                                        |
+| Компоненты           | В, С, Ф                                                                  |
+| Время Активации      | 1 стандартн. действ.                                                     |
+| Диапазон             | Дальний (120 м+12 м/ур.)                                                 |
+| Эффект               | Визуальная фикция, которая не может быть больше 12 м3 + 3 м3/уровень (О) | 
+| Длительность         | Концентрация                                                             |
+| Спасбросок           | Воля неверие (при взаимодействии)                                        |
+| Устойчивость к Магии | Нет                                                                      |
+| Фокусирование        | Небольшая прядь шерсти                                                   |
 
-Иллюзия (Фикция)
-Уровень: Бард 1, Маг/Чар 1
-Компоненты: В, С, Ф
-Время Активации: 1 стандартн. действ.
-Диапазон: Дальний (120 м+12 м/ур.)
-Эффект: Визуальная фикция, которая не
-может быть больше 12 м3 + 3 м3/уровень
-(О)
-Длительность: Концентрация
-Спасбросок: Воля неверие (при
-взаимодействии)
-Устойчивость к Магии: Нет
-Это заклинание создает визуальную иллюзию объекта, существа, или силы которую заклинатель видел, когда-либо.
-Иллюзия не создает никаких звуков,
-запахов, текстур или температур. Вы
-можете перемещать иллюзию ограничения размеров эффекта.
-Фокусирование: Небольшая прядь
-шерсти
+Это заклинание создает визуальную иллюзию объекта, существа, или силы которую заклинатель видел, когда-либо. Иллюзия не создает никаких звуков, запахов, текстур или температур. Вы можете перемещать иллюзию ограничения размеров эффекта.
