--- a/spells/момент-предвидения.md
+++ b/spells/момент-предвидения.md
@@ -1,28 +1,18 @@
 
-Момент Предвидения
+# Момент Предвидения
 
-Ворожба
-Уровень: Маг/Чар 8, Удача 8
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Лично
-Цель: Вы
-Длительность: 1 час/уровень или до
-разряжения
-Заклинание наделяет вас сильнейшим
-шестым чувством. Во время его длительности вы можете выбирать один
-из следующих эффектов: заклинание
-дает внутренний бонус, равный вашему
-уровню заклинателя (максимум +25)
-для одного броска атаки, использования
-способности, навыка или спасброска.
-По выбору вы можете применять этот
-внутренний бонус к КД против одной
-атаки (даже если вы оторопевший).
+|                 |                                 |
+| --------------- | ------------------------------- |
+| Тип             | Ворожба                         |
+| Уровень         | Маг/Чар 8, Удача 8              |
+| Компоненты      | В, С                            |
+| Время Активации | 1 стандартн. действ.            |
+| Диапазон        | Лично                           |
+| Цель            | Вы                              |
+| Длительность    | 1 час/уровень или до разряжения |
 
-Активация этого эффекта не занимает действие. Вы можете активировать
-его при необходимости даже в чужую
-инициативу. Вы должны заявить, что
-используете момент предвидения перед
-броском, который хотите модифицировать. После одного использования бонуса заклинание заканчивается.
-Нельзя иметь более одного сактивированного заклинания момента предвидения одновременно.
+
+Заклинание наделяет вас сильнейшим шестым чувством. Во время его длительности вы можете выбирать один из следующих эффектов: заклинание дает внутренний бонус, равный вашему уровню заклинателя (максимум +25) для одного броска атаки, использования способности, навыка или спасброска. По выбору вы можете применять этот внутренний бонус к КД против одной атаки (даже если вы оторопевший).
+
+Активация этого эффекта не занимает действие. Вы можете активировать его при необходимости даже в чужую инициативу. Вы должны заявить, что
+используете момент предвидения перед броском, который хотите модифицировать. После одного использования бонуса заклинание заканчивается. Нельзя иметь более одного сактивированного заклинания момента предвидения одновременно.
