--- a/spells/мудрость-совы-массовая.md
+++ b/spells/мудрость-совы-массовая.md
@@ -1,11 +1,10 @@
+# Мудрость Совы, Массовая
 
-Мудрость Совы, Массовая
+|          |                                                                        |
+| -------- | ---------------------------------------------------------------------- |
+| Тип      | Превращение                                                            |
+| Уровень  | Дрд 6, Жр 6, Маг/Чар 6                                                 |
+| Диапазон | Ближний (7,5 м+1,5 м/2 ур.)                                            |
+| Цель     | 1 существо/уровень, если несколько, то на расстоянии друг от друга 9 м |
 
-Превращение
-Уровень: Дрд 6, Жр 6, Маг/Чар 6
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Цель: 1 существо/уровень, если
-несколько, то на расстоянии друг от
-друга 9 м
-Это заклинание работает как мудрость
-совы, за исключением того, что воздействует сразу на нескольких существ.
+Это заклинание работает как [мудрость совы](/spells/мудрость-совы.md), за исключением того, что воздействует сразу на нескольких существ.
