--- a/spells/наслать-страх.md
+++ b/spells/наслать-страх.md
@@ -1,8 +1,7 @@
 
 Наслать Страх
 
-Некромантия [Страх, Воздействует на
-разум]
+Некромантия [Страх, Воздействует на разум]
 Уровень: Брд 1, Жр 1, Маг/Чар 1, Смерть 1
 Компоненты: В, С
 Время Активации: 1 стандартн. действ.
